--- a/HeroesRandomiser.Web/ClientApp/public/index.html
+++ b/HeroesRandomiser.Web/ClientApp/public/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#221e4a">
+    <meta name="description" content="Heroes Randomiser is a (silly) team generator for Heroes of the Storm.">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
     <title>Heroes Randomiser</title>
   </head>
   <body>
+    <div id="root"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
   </body>
 </html>
